--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://192.168.56.101/sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.0.104/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
 server:
@@ -15,5 +15,5 @@ server:
 #  file: C:\sell-project-log\sell.log
 #  #  path: C:\sell-project-log
 #  level:
-#    com.imooc.LoggerTest: debug  # ºÃÏñÃ»Ð§¹û..Ò»Ñù²»Êä³ödebug
+#    com.imooc.LoggerTest: debug  # ï¿½ï¿½ï¿½ï¿½Ã»Ð§ï¿½ï¿½..Ò»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½debug
 
